# life-timeline

./: PLAN.md  README.md  index.html  pyproject.toml  setup.py  timeline-data.js
events/: 2022-01-01_earlier-event.md  2023-01-01_first-test-event.md  2024-03-19-started-life-timeline.md
lifeline/: __init__.py  cli.py  event.md.j2  event.py  git.py  utils.py
lifeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: manage_events.py
tests/: conftest.py  test_git.py
