[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[project]
name = "lifeline"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "click",
    "gitpython",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
] 